Adicionar o Swagger
